--- a/BlackJack/pom.xml
+++ b/BlackJack/pom.xml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.opciones</groupId>
-    <artifactId>cucumber</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    
+    <groupId>blackjack</groupId>
+    <artifactId>blackjack</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <cucumber.version>4.2.5</cucumber.version>
+        <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>io.cucumber</groupId>
+            <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>${cucumber.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-junit</artifactId>
-            <version>${cucumber.version}</version>
-            <scope>test</scope>
+            <version>1.2.4</version>
         </dependency>
 
         <dependency>
@@ -38,7 +30,8 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-   <build>
+
+    <build>
         <finalName>blackjack</finalName>
         <plugins>
             <plugin>
@@ -57,4 +50,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
